fix(calendar): apply text-overflow ellipsis to the values
Label texts were coliding when longer values are applied. Make sure
ellipsis gets applied if the values get too long.

--- a/src/core/styles/components/calendar/_calendar-theme.scss
+++ b/src/core/styles/components/calendar/_calendar-theme.scss
@@ -177,10 +177,10 @@ $components: register-component($components, #{$component-name});
     // Calendar Values
     $cal-value-w: rem(40px, 16px) !default;
     $cal-value-h: $cal-value-w;
-    $cal-valu-br: $cal-value-w / 2;
+    $cal-value-br: $cal-value-w / 2;
     $cal-value-margin: em(2px, 16px) !default;
     $cal-value-fs: em(16px, 16px) !default;
-    $cal-value-lh: em(22px, 16px) !default;
+    $cal-value-lh: $cal-value-h !default;
     $cal-value-fw: 600 !default;
 
     $cal-value-year-fs: em(18px, 16px) !default;
@@ -301,20 +301,16 @@ $components: register-component($components, #{$component-name});
     }
 
     %cal-value {
-        display: flex;
-        margin: $cal-value-margin;
-        justify-content: center;
-        align-items: center;
+        @include ellipsis();
         width: $cal-value-w;
         height: $cal-value-h;
+        min-width: 2ch;
         font-size: $cal-value-fs;
+        margin: $cal-value-margin;
         line-height: $cal-value-lh;
-        border-radius: $cal-valu-br;
+        text-align: center;
+        border-radius: $cal-value-br;
         color: map-get($this, 'content-text-color');
-        min-width: 0;
-        white-space: nowrap;
-        overflow: hidden;
-        text-overflow: ellipsis;
         cursor: pointer;
         outline: none;
         transition: background .15s ease-out;
@@ -323,6 +319,7 @@ $components: register-component($components, #{$component-name});
     %cal-value--label {
         color: map-get($this, 'inactive-text-color');
         cursor: default;
+        border-radius: 0;
     }
 
     %cal-value--weekend {
